--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,9 @@
 envlist = py35, py36, py37
 
 [testenv]
+ignore_errors =
+    true
+
 extras =
     test
 
@@ -9,7 +12,6 @@ deps =
     mypy
     isort
     flake8
-    pytest
     coverage
 
 commands =
